--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -35,8 +35,9 @@ Kristina J. Anderson-Teixeira^1,2^*
 
 ## Introduction
 
-Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC REF).
-This has increased the severity and frequency of heat waves (Perkins et al. 2012) which is expected to have profound effects on forest biodiversity and ecosystem function (Feeley et al. 2020, REFS), and the resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will have a critical influence on the future of trajectory of climate change (e.g., Bonan 2008).
+Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC REF). 
+There is also increasing severity and frequency of heat waves (Perkins et al. 2012).
+This is expected to have profound effects on forest biodiversity and ecosystem function (REFS), and the resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will have a critical influence on the future of trajectory of climate change (e.g., Bonan 2008).
 With increases in temperature, temperate and tropical forest canopies are already functioning beyond their optimal photosynthetic threshold (Mau et al. 2020). 
 This, alongside climate change-driven disturbances such as drought, may contribute to increasing tree mortality in forests around the world (McDowell et al. 2020; REFS).
 
@@ -72,18 +73,16 @@ v.	What are the implications of these patterns for the ecology and climate chang
 ## The biophysical environment
 
 **Forest canopies have a buffering effect on multiple aspects of the understory climate (Fig. **2**).**
-
-Most notably, light conditions vary across vertical tree gradient due to the variation in foliage density that limits light to lower canopy and understory (Mau et. al 2018, Fauset et al. 2017, Niinemets et al.., REFS).
+Most notably, light conditions vary across vertical tree gradient due to the variation in foliage density that limits light to lower canopy and understory (Mau et. al 2018, Fauset et al. 2017, Niinemets et al.., REFS) (Fig. **2x**).
 Solar radiation increases with canopy height (Mau et al. 2018, M.A. Caveleri et al , Niinemets, REFS) and decreases along a vertical profile from the top of the canopy to the forest floor such that the forest floor receives 1% of the above canopy values (Roberts et al. 1990)
 Radiation is an important variable in determining differences in leaf traits and responses to temperature (Mau et. al 2018, Fauset et al. 2017, Rey Sanchez et al. 2016, Doughty and Gouden 2008)
-(Fig. **2x**).
-- *@bonan_ecological_2016 reviews this and points to appropriate references*
+- (*@bonan_ecological_2016 reviews this and points to appropriate references*)
 -	Sunflecks: Leaky et al. 2003?
 
 **Wind speeds are also higher at the top of the canopy (Fig. **2x**).**
-- *(find some good refs for this/ fill in more specifics)*
-- @mcgregor_tree_nodate
-This results in higher boundary layer conductance, *DEFINE*, for canopy leaves [@martin_boundary_1999].(Roberts et al. 1990)
+*(fill in some specifics from the NEON analysis)*
+Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [e.g., REFS; @mcgregor_tree_nodate] and open savannas (Curtis et al. 2018).
+This results in higher boundary layer conductance, *DEFINE*, for canopy leaves [@martin_boundary_1999; Roberts et al. 1990].
 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. **2x**).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies across Europe [@zellweger_seasonal_2019] and in the northwestern United States [@davis_microclimatic_2019]. 
@@ -171,13 +170,14 @@ However, counteracting this, lower wind speed in understory would reduce latent 
 Thus, under hot conditions, canopy leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance; however, their $T_{leaf}$ can be highly elevated above $T_{air}$ when stomatal conductance is limiting.
 
 ![**Figure 3. Leaf temperature in response to (a) XXX, (b) XXX (key trait or environmental variables).** Examples to be produced based on energy balance model using the tealeaves R package of @muir_tealeaves_2019: https://github.com/EcoClimLab/vertical-thermal-review/issues/6. Current placeholder shows figures from Campbell&Norman.](leaf_energy_balance/C&N_figures.png)
+
 **Aligning with biophysical expectations, field observations have show that leaf temperatures are influenced by the biophysical environment and leaf traits.**
 1.	Air T
 2.	Solar radiation
 3.	Leaf traits 
 -  Michaletz et al have done some interesting work on leaf thermoregulation in relation to various leaf traits. I don’t think there is sun vs shade tests, but we could look at how this might translate, or how some of the traits he has calculated might differ between sun and shade leaves. For example, he has this thermal time constant parameter that is calculated from leaf mass per area, leaf dry matter content, and some environmental parameters. E.g.: DOI: 10.1038/nplants.2016.129, http://dx.doi.org/10.1016/j.tree.2015.09.006
 
-**When vertical gradients in the biopgysical environment and leaf traits combine to shape leaf energy budgets, $T_{leaf}$ often differs little from $T_{air}$ and between understory and canopy (Fig. **2?**).**
+**When vertical gradients in the biophysical environment and leaf traits combine to shape leaf energy budgets, $T_{leaf}$ often differs little from $T_{air}$ and between understory and canopy (Fig. **2?**).**
 For instance... 	(Bolstad et al. 1999).
 Similarly, during the dry season in a tropical moist forest in Panama... (Rey-Sánchez et al. 2016).
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
@@ -188,7 +188,9 @@ Sun leaves can also be  cooled relative to $T_{air}$ more than shade leaves (Rey
 ## Leaf metabolism and thermal responses
 
 Leaf metabolism is strongly shaped by leaf temperature, and by the traits and environmental drivers reviewed above, all of which vary across vertical forest gradients (Fig. 1). 
-However, as we detail below, there are limited studies comparing thermal responses of sun and shade leaves.
+However, as we detail below, there are limited studies comparing thermal responses of sun and shade leaves (Table 2).
+
+**Table 2. Summary of observed variation in leaf metabolism and thermal responses across the vertical gradient and/or between sun and shade leaves** ([*GitHub issue #9*](https://github.com/EcoClimLab/vertical-thermal-review/issues/9))
 
 **Photosynthesis is generally higher in sun leaves-- a fact that is well-established (REFS) and observed in numerous field studies.**
 This is primarily driven by the greater light available to sun leaves.
