--- a/tables.Rmd
+++ b/tables.Rmd
@@ -33,3 +33,22 @@ kable(traits_table, caption = "Table 1. (traits review)", format = "latex", book
   kable_styling(latex_options = c("scale_down", "hold_position"), protect_latex = T) 
   #NOTE: REFERENCES for this table need to go in the nocite section of header in the main doc!!!
 ```
+
+
+\newpage
+
+```{r eval = TRUE, echo=FALSE, warning=FALSE}
+library(knitr)
+library(kableExtra)
+metabolism_table <- read.csv("Lit_Review/metabolism_table.csv", stringsAsFactors = FALSE, check.names = FALSE)
+kable(metabolism_table, caption = "Table 2. (metabolism review)", format = "latex", booktabs = TRUE,  escape = F)%>%
+  column_spec(1, width = "6cm") %>%
+  column_spec(2, width = "2cm") %>%
+  column_spec(6, width = "4cm") %>%
+  pack_rows("Stomatal conductance", 1, 3, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("Photosynthesis", 4, 7, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("Respiration", 8, 12, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("Thermal tolerance", 13, 13, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  kable_styling(latex_options = c("scale_down", "hold_position"), protect_latex = T) 
+  #NOTE: REFERENCES for this table need to go in the nocite section of header in the main doc!!!
+```
