--- a/tables.Rmd
+++ b/tables.Rmd
@@ -46,8 +46,9 @@ kable(metabolism_table, caption = "Table 2. (metabolism review)", format = "late
   column_spec(2, width = "2cm") %>%
   column_spec(6, width = "4cm") %>%
   pack_rows("Stomatal conductance", 1, 3, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
-  pack_rows("Photosynthesis", 4, 7, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
-  pack_rows("Respiration", 8, 11, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("Photosynthesis", 4, 8, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("Respiration", 9, 12, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
   kable_styling(latex_options = c("scale_down", "hold_position"), protect_latex = T) 
   #NOTE: REFERENCES for this table need to go in the nocite section of header in the main doc!!!
 ```
+*composite climatic stress variable from canopy temperature, vapour pressure deficit, and relative humidity is higher in lower canopy
