--- a/tables.Rmd
+++ b/tables.Rmd
@@ -26,7 +26,7 @@ options(knitr.table.format = "latex")
 library(knitr)
 library(kableExtra)
 traits_table <- read.csv("Lit_Review/traits_table.csv", stringsAsFactors = FALSE, check.names = FALSE)
-kable(traits_table, caption = "Table 1. (traits review)", format = "latex", booktabs = TRUE,  escape = F)%>%
+kable(traits_table, caption = "Table 1. Summary of observed variation in thermally-relevant leaf traits with canopy height and/or between sun and shade leaves", format = "latex", booktabs = TRUE,  escape = F)%>%
   column_spec(1, width = "3cm") %>%
   column_spec(2, width = "2cm") %>%
   column_spec(6, width = "4cm") %>%
@@ -41,13 +41,14 @@ kable(traits_table, caption = "Table 1. (traits review)", format = "latex", book
 library(knitr)
 library(kableExtra)
 metabolism_table <- read.csv("Lit_Review/metabolism_table.csv", stringsAsFactors = FALSE, check.names = FALSE)
-kable(metabolism_table, caption = "Table 2. (metabolism review)", format = "latex", booktabs = TRUE,  escape = F)%>%
+kable(metabolism_table, caption = "Table 2. Summary of observed variation in leaf metabolism and thermal responses across the vertical gradient and/or between sun and shade leaves", format = "latex", booktabs = TRUE,  escape = F)%>%
   column_spec(1, width = "6cm") %>%
   column_spec(2, width = "2cm") %>%
   column_spec(6, width = "4cm") %>%
   pack_rows("Stomatal conductance", 1, 3, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
   pack_rows("Photosynthesis", 4, 8, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
-  pack_rows("Respiration", 9, 12, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("Respiration", 9, 14, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("VOC production", 15, 15, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
   kable_styling(latex_options = c("scale_down", "hold_position"), protect_latex = T) 
   #NOTE: REFERENCES for this table need to go in the nocite section of header in the main doc!!!
 ```
