--- a/tables.Rmd
+++ b/tables.Rmd
@@ -30,8 +30,8 @@ kable(traits_table, caption = "Table 1. Summary of observed variation in thermal
   column_spec(1, width = "3cm") %>%
   column_spec(2, width = "2cm") %>%
   column_spec(6, width = "4cm") %>%
-  pack_rows("Leaf anatomy and morphological traits", 1, 10, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
-  pack_rows("Leaf physiology and biochemical traits", 11, 17, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("Leaf anatomy and morphological traits", 1, 10, latex_gap_space = "1em", colnum = 4, hline_before = FALSE) %>%
+  pack_rows("Leaf biochemical and physiological traits", 11, 17, latex_gap_space = "1em", colnum = 4, hline_before = FALSE) %>%
   kable_styling(latex_options = c("scale_down", "hold_position"), protect_latex = T) 
   #NOTE: REFERENCES for this table need to go in the nocite section of header in the main doc!!!
 ```
@@ -47,10 +47,10 @@ kable(metabolism_table, caption = "Table 2. Summary of observed variation in lea
   column_spec(1, width = "6cm") %>%
   column_spec(2, width = "2cm") %>%
   column_spec(6, width = "4cm") %>%
-  pack_rows("Stomatal conductance", 1, 3, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
-  pack_rows("Photosynthesis", 4, 8, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
-  pack_rows("Respiration", 9, 14, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
-  pack_rows("VOC production", 15, 15, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("Stomatal conductance", 1, 7, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("Photosynthesis", 8, 20, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("Respiration", 21, 27, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
+  pack_rows("VOC production", 28, 29, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
   kable_styling(latex_options = c("scale_down", "hold_position"), protect_latex = T) 
   #NOTE: REFERENCES for this table need to go in the nocite section of header in the main doc!!!
 ```
