--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1559,7 +1559,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 }
 
 @article{kafutiFoliarWoodTraits2020,
-	title = {Foliar and {Wood} {Traits} {Covary} along a {Vertical} {Gradient} within the {Crown} of {Long}-{Lived} {Light}-{Demanding} {Species} of the {Congo} {Basin} {Semi}-{Deciduous} {Forest}},
+	title = {Foliar and {Wood} {Traits} {Covary} along a {Vertical} {Gradient} within the {Crown} of {Long}-{Lived} {Light}-{Demanding} {Species} of the {Congo} {Basin} {Semi}-{Deciduous} {Forest},
 	volume = {11},
 	copyright = {http://creativecommons.org/licenses/by/3.0/},
 	url = {https://www.mdpi.com/1999-4907/11/1/35},
