--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1558,8 +1558,11 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	pages = {323--339}
 }
 
+@misc{zotero-955
+}
+
 @article{kafutiFoliarWoodTraits2020,
-	title = {Foliar and {Wood} {Traits} {Covary} along a {Vertical} {Gradient} within the {Crown} of {Long}-{Lived} {Light}-{Demanding} {Species} of the {Congo} {Basin} {Semi}-{Deciduous} {Forest},
+	title = {Foliar and {Wood} {Traits} {Covary} along a {Vertical} {Gradient} within the {Crown} of {Long}-{Lived} {Light}-{Demanding} {Species} of the {Congo} {Basin} {Semi}-{Deciduous} {Forest}},
 	volume = {11},
 	copyright = {http://creativecommons.org/licenses/by/3.0/},
 	url = {https://www.mdpi.com/1999-4907/11/1/35},
@@ -1577,6 +1580,27 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	keywords = {\textit{Pericopsis elata}, leaf traits, tradeoff, trait-based ecology, tropical rainforest, water deficit, wood traits},
 	pages = {35},
 	file = {Full Text PDF:files/957/Kafuti et al. - 2020 - Foliar and Wood Traits Covary along a Vertical Gra.pdf:application/pdf;Snapshot:files/958/35.html:text/html}
+}
+
+@article{kafutiFoliarWoodTraits2020a,
+	title = {Foliar and {Wood} {Traits} {Covary} along a {Vertical} {Gradient} within the {Crown} of {Long}-{Lived} {Light}-{Demanding} {Species} of the {Congo} {Basin} {Semi}-{Deciduous} {Forest}},
+	volume = {11},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	url = {https://www.mdpi.com/1999-4907/11/1/35},
+	doi = {10.3390/f11010035},
+	abstract = {Plant functional traits have shown to be relevant predictors of forest functional responses to climate change. However, the trait-based approach to study plant performances and ecological strategies has mostly been focused on trait comparisons at the interspecific and intraspecific levels. In this study, we analyzed traits variation and association at the individual level. We measured wood and leaf traits at different height locations within the crown of five individuals of Pericopsis elata (Harms) Meeuwen (Fabaceae) from the northern tropical forest of the Democratic Republic of the Congo. All traits varied between and within individuals. The between-individual variation was more important for leaf traits (23\%\&ndash;48\%) than for wood traits ({\textasciitilde}10\%) where the within-individual variation showed to be more important (33\%\&ndash;39\%). The sample location height within the crown was found to be the driving factor of this within-individual variation. In a gradient from the base to the top of the crown, theoretical specific hydraulic conductivity and specific leaf area decreased while the stomatal density increased. We found significant relationships among traits and between wood and leaf traits. However, these relationships varied with the position within the crown. The relationship between vessel size and vessel density was negative at the bottom part of the crown but positive upward. Also, the negative relationship between stomatal density and stomatal size became stronger with increasing height within the crown. Finally, the positive relationship between specific leaf area and theoretical specific hydraulic conductivity became stronger in higher parts of the crown, suggesting that P. elata constantly adapts its water use with respect to its water supply, more strongly at the top of the crown where the environment is more extreme and less buffered against environmental fluctuations.},
+	language = {en},
+	number = {1},
+	urldate = {2020-08-30},
+	journal = {Forests},
+	author = {Kafuti, Chadrack and Bourland, Nils and De Mil, Tom and Meeus, Sofie and Rousseau, Mélissa and Toirambe, Benjamin and Bolaluembe, Papy-Claude and Ndjele, Léopold and Beeckman, Hans},
+	month = jan,
+	year = {2020},
+	note = {Number: 1
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {\textit{Pericopsis elata}, leaf traits, tradeoff, trait-based ecology, tropical rainforest, water deficit, wood traits},
+	pages = {35},
+	file = {Full Text PDF:files/960/Kafuti et al. - 2020 - Foliar and Wood Traits Covary along a Vertical Gra.pdf:application/pdf;Snapshot:files/961/htm.html:text/html}
 }
 
 @article{valladaresShadeToleranceKey2008b,
